name:          mu-example-health-check-avro
version:       0.2.0.0
synopsis:
  Example health-check project from mu-scala (with avro) ported to mu-haskell

description:
  Example health-check project from mu-scala (with avro) ported to mu-haskell.

license:       Apache-2.0
license-file:  LICENSE
author:        Alejandro Serrano, Flavio Corpa
maintainer:    alejandro.serrano@47deg.com
copyright:     Copyright © 2020 47 Degrees. <http://47deg.com>
category:      Network
build-type:    Simple
cabal-version: >=1.10
data-files:    healthcheck.avdl
bug-reports:   https://github.com/higherkindness/mu-haskell/issues

executable health-server-avro
  main-is:          Server.hs
  other-modules:    Definition
  build-depends:
      base            >=4.12  && <5
    , deferred-folds
    , mu-avro         >=0.2.0
    , mu-grpc-server  >=0.2.0
    , mu-rpc          >=0.2.0
    , mu-schema       >=0.2.0
    , stm
    , stm-conduit
    , stm-containers
    , text

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

executable health-client-tyapps-avro
  main-is:          ClientTyApps.hs
  other-modules:    Definition
  build-depends:
      base            >=4.12  && <5
    , mu-avro         >=0.2.0
    , mu-grpc-client  >=0.2.0
    , mu-rpc          >=0.2.0
    , mu-schema       >=0.2.0
    , text

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall

executable health-client-record-avro
  main-is:          ClientRecord.hs
  other-modules:    Definition
  build-depends:
      base            >=4.12  && <5
    , mu-avro         >=0.2.0
    , mu-grpc-client  >=0.2.0
    , mu-rpc          >=0.2.0
    , mu-schema       >=0.2.0
    , text

  hs-source-dirs:   src
  default-language: Haskell2010
  ghc-options:      -Wall
