name:               mu-example-seed-avro
version:            0.3.0.0
synopsis:
  Example seed project from mu-scala (with avro) ported to mu-haskell

description:
  Example seed project from mu-scala (with avro) ported to mu-haskell.

license:            Apache-2.0
license-file:       LICENSE
author:             Flavio Corpa, Alejandro Serrano
maintainer:         flavio.corpa@47deg.com
copyright:          Copyright © 2020 47 Degrees. <http://47deg.com>
category:           Web
build-type:         Simple
cabal-version:      >=1.10
extra-source-files: README.md
data-files:         seed.avdl
homepage:
  https://github.com/higherkindness/mu-haskell/examples/seed/avro#readme

bug-reports:        https://github.com/higherkindness/mu-haskell/issues

executable mu-example-seed-avro
  hs-source-dirs:   src
  main-is:          Main.hs
  other-modules:    Schema
  default-language: Haskell2010
  build-depends:
      base            >=4.12  && <5
    , monad-logger
    , mu-avro         >=0.2.0
    , mu-grpc-server  >=0.2.0
    , mu-optics       >=0.2.0
    , mu-rpc          >=0.2.0
    , mu-schema       >=0.2.0
    , text

  ghc-options:      -Wall -fprint-potential-instances
